版本号更新至alpha 0.0.4，引入EasyCaptcha依赖，完成了注册/登录的验证码检查功能